--- a/packages.conf
+++ b/packages.conf
@@ -2,7 +2,6 @@
 SYSTEM_UTILS=(
   htop
   btop
-  1password
   lazygit
   lazydocker
   stow
@@ -36,6 +35,10 @@ MAINTENANCE=(
 # Desktop environment
 DESKTOP=(
   hyprland
+  waybar
+  rofi
+  swww
+  swaync
 )
 
 # Media packages
